--- a/index.html
+++ b/index.html
@@ -30,17 +30,86 @@
 </style>
 </head>
 <body>
-    <header class="manrope">
-        <div>
+  <!-- Main content -->
+   <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+
+    <!-- Header content -->
+     <header class="lg:flex pt-10 mb-20">
+        <!-- Text content -->
+         <div>
+            <h1 class="text-5xl md:text-7xl manrope font-extrabold">It's good <br> tea time at The <br>Tea House</h1>
+            <br>
+            <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <br>
+            <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+         </div>
+
+         <!-- Image content -->
+          <div class="relative">
             <div>
-                <h1 class="text-8xl">It's good tea time at The Tea House</h1>
-                <p>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <button>Explore More</button>
+                <img class="w-full" src="images/banner.png" alt="">
             </div>
-            <div>
-                <img src="images/banner.png" alt="">
+            <div class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:px-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+                <div>
+                    <i class="fa-solid fa-star text-3xl text-amber-500"></i>
+                </div>
+                <div class="ml-5">
+                    <h2 class="lg:text-2xl font-bold">5.00</h2>
+                    <p class="text-gray-500">Trust Pilot Ratings</p>
+                </div>
             </div>
+          </div>
+
+     </header>
+
+
+     <!-- Featured product -->
+
+     <section class="py-8 lg:py-24">
+        <!-- Title -->
+
+        <div class="text-center mb-5">
+            <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-2">Our Featured Products</h1>
+            <p class="text-gray-600 mx-auto max-w-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
         </div>
-    </header>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-center">
+            <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="images/tea-1.png" alt="">
+               <div class="p-4">
+                <h3 class="text-2xl font-extrabold">Milk Tea</h3>
+                <p class="text-gray-400 text-base font-semibold">Creamer could be replaced by fresh milk</p>
+               </div>
+            </div>
+            <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="images/tea-2.png" alt="">
+               <div class="p-4">
+                <h3 class="text-2xl font-extrabold">Black Tea</h3>
+                <p class="text-gray-400 text-base font-semibold">Creamer could be replaced by fresh milk</p>
+               </div>
+            </div>
+            <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="images/tea-3.png" alt="">
+               <div class="p-4">
+                <h3 class="text-2xl font-extrabold">Lemon Tea</h3>
+                <p class="text-gray-400 text-base font-semibold">Creamer could be replaced by fresh milk</p>
+               </div>
+            </div>
+            <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="images/tea-4.png" alt="">
+               <div class="p-4">
+                <h3 class="text-2xl font-extrabold">Green Tea</h3>
+                <p class="text-gray-400 text-base font-semibold">Creamer could be replaced by fresh milk</p>
+               </div>
+            </div>
+          
+        </div>
+     </section>
+
+
+
+
+
+   </main>
 </body>
 </html>
