--- a/index.html
+++ b/index.html
@@ -135,6 +135,24 @@
      </section>
 
 
+     <!-- reviews section -->
+
+     <section class="mb-24">
+      <div class="bg-gradient-to-r from-orange-400 to-red-400 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
+
+        <!-- Text section -->
+         <div class="manrope w-5/6">
+          <h1 class="text-5xl font-extrabold mb-5 mt-10">Meet Our Super Clients</h1>
+          <p class="text-base font-medium mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          <button class="text-orange-700 bg-white rounded-lg font-bold px-3 py-2">Show All</button>
+         </div>
+
+      </div>
+
+     </section>
+
+     
+
 
 
 
