--- a/index.html
+++ b/index.html
@@ -141,11 +141,54 @@
       <div class="bg-gradient-to-r from-orange-400 to-red-400 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
 
         <!-- Text section -->
-         <div class="manrope w-5/6">
-          <h1 class="text-5xl font-extrabold mb-5 mt-10">Meet Our Super Clients</h1>
-          <p class="text-base font-medium mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-          <button class="text-orange-700 bg-white rounded-lg font-bold px-3 py-2">Show All</button>
-         </div>
+        <div class="flex justify-center items-center overflow-hidden">
+          <div class="manrope w-5/6">
+            <h1 class="text-5xl font-extrabold mb-5 mt-10">Meet Our Super Clients</h1>
+            <p class="text-base font-medium mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="text-orange-700 bg-white rounded-lg font-bold px-3 py-2">Show All</button>
+           </div>
+        </div>
+
+         <!-- Card section -->
+          <div class="relative py-24">
+            <!-- Middle card -->
+            <div class="absolute z-10 top-44 md:top-52">
+              <div class="h-56 bg-white text-black rounded-lg w-full md:w-3/4 flex items-center px-5">
+                <div class="absolute -top-5 -left-5 bg-white rounded-full ">
+                    <img class="p-1" src="images/client.png" alt="">
+                </div>
+                <div>
+                  <p class="text-gray-500 mb-5 ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                  <h2 class="font-bold">Ilham Yuda</h2>
+                  <small class="font-bold text-gray-500">Businessman</small>
+                </div>
+             </div>
+             </div>
+              <!-- Top card -->
+               <div class="relative left-8 md:left-32 h-56 bg-white text-black rounded-lg w-full md:w-3/4 flex items-center px-5  opacity-40">
+                  <div class="absolute -top-5 -left-5 bg-white rounded-full ">
+                      <img class="p-1" src="images/client.png" alt="">
+                  </div>
+                  <div>
+                    <p class="text-gray-500 mb-5 ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h2 class="font-bold">Ilham Yuda</h2>
+                    <small class="font-bold text-gray-500">Businessman</small>
+                  </div>
+               </div>
+               <!-- Bottom card -->
+               <div class="relative left-8 md:left-32 h-56 top-10 bg-white text-black rounded-lg w-full md:w-3/4 flex items-center px-5 opacity-40">
+                <div class="absolute -top-5 -left-5 bg-white rounded-full ">
+                    <img class="p-1" src="images/client.png" alt="">
+                </div>
+                <div>
+                  <p class="text-gray-500 mb-5 ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                  <h2 class="font-bold">Ilham Yuda</h2>
+                  <small class="font-bold text-gray-500">Businessman</small>
+                </div>
+             </div>
+
+
+          </div>
 
       </div>
 
