added full footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script src="https://kit.fontawesome.com/654a63bda1.js" crossorigin="anonymous"></script>
 <style>
 
-    .manrope{
+    .font-manrope{
   font-family: "Manrope", serif;
   font-optical-sizing: auto;
 
@@ -37,7 +37,7 @@
      <header class="lg:flex pt-10 mb-20">
         <!-- Text content -->
          <div>
-            <h1 class="text-5xl md:text-7xl manrope font-extrabold">It's good <br> tea time at The <br>Tea House</h1>
+            <h1 class="text-5xl md:text-7xl font-manrope font-extrabold">It's good <br> tea time at The <br>Tea House</h1>
             <br>
             <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
             <br>
@@ -107,7 +107,7 @@
      </section>
 
 
-     <section class=" manrope mb-24">
+     <section class=" font-manrope mb-24">
         <div class="grid grid-cols-1 lg:grid-cols-2">
             <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
                 <div class="h-38 bg-gradient-to-r from-red-100 to-red-50 rounded-xl"></div>
@@ -142,7 +142,7 @@
 
         <!-- Text section -->
         <div class="flex justify-center items-center overflow-hidden">
-          <div class="manrope w-5/6">
+          <div class="font-manrope w-5/6">
             <h1 class="text-5xl font-extrabold mb-5 mt-10">Meet Our Super Clients</h1>
             <p class="text-base font-medium mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             <button class="text-orange-700 bg-white rounded-lg font-bold px-3 py-2">Show All</button>
@@ -195,7 +195,7 @@
      </section>
 
      <!-- News & Events -->
-      <section class="manrope">
+      <section class="font-manrope">
         <div class="text-center my-10">
           <h1 class="text-3xl md:text-4xl lg:text-5xl font-extrabold mb-10">News & Events</h1>
         <p class="text-base font-medium text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
@@ -204,10 +204,10 @@
 
       </section>
    </main>
-   <footer class=" manrope bg-gradient-to-r from-orange-50 to-orange-100 text-gray-700 py-10 px-4 md:px-16">
+   <footer class=" font-manrope bg-gradient-to-r from-orange-50 to-orange-100 text-gray-700 py-10 px-4 md:px-16">
       <div class="w-9/12 mx-auto">
         <!-- Logo -->
-         <div class="mb-8 flex justify-between">
+        <div class="mb-8 flex justify-between">
           <img class="mb-8" src="images/cup.png" alt="">
          
          <div class="flex items-center gap-5">
@@ -266,6 +266,28 @@
               
             </ul>
            </div>
+           <!-- 4th column -->
+            <div class="text-2xl font-semibold mb-3">
+              <h3>Subscribe to our <br> newsletter</h3>
+              <div class="flex flex-col space-y-2">
+                  <div>
+                    <input class="bg-transparent border-b-2 border-black w-4/6 mt-5" placeholder="Email address" type="text">
+                    <i class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 text-white rounded-full justify-center items-center"></i>
+                  </div>
+                  <div class="flex justify-between  mb-2 mt-8 w-2/5">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-whatsapp"></i>
+                    <i class="fa-brands fa-telegram"></i>
+
+                  </div>
+              </div>
+            </div>
+
+       </div>
+       <div class="text-center pt-4 mt-4">
+        <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
        </div>
     </div>
    </footer>
