--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
                 <a class="hover:text-orange-600" href="#">Home</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">About Us</a>
+                <a class="hover:text-orange-600" href="https://www.princeteahouse.com/">About Us</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Insurance</a>
+                <a class="hover:text-orange-600" href="https://green-delta.com/">Insurance</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+                <a class="hover:text-orange-600" href="https://policies.google.com/privacy?hl=en-US">Privacy Policy</a>
               </li>
             </ul>
            </div>
@@ -240,16 +240,16 @@
             <h3 class="text-xl font-semibold mb-3">Our Services</h3>
             <ul class="space-y-2">
               <li>
-                <a class="hover:text-orange-600" href="#">Life Insurance</a>
+                <a class="hover:text-orange-600" href="https://www.metlife.com.bd/">Life Insurance</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Car Insurance</a>
+                <a class="hover:text-orange-600" href="https://www.acko.com/gi/lp/new-car-comprehensive?utm_source=affiliate&utm_campaign=utmdigital&utm_term=inventory_287670&utm_content=creative_name&gad_source=1">Car Insurance</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Health Insurance</a>
+                <a class="hover:text-orange-600" href="https://heu.gov.bd/site/page/2a89bd26-1b0b-4c33-84a5-bb486d92dc8c/-">Health Insurance</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">House Insurance</a>
+                <a class="hover:text-orange-600" href="https://www.comparethemarket.com/home-insurance/">House Insurance</a>
               </li>
             </ul>
            </div>
@@ -258,10 +258,10 @@
             <h3 class="text-xl font-semibold mb-3">Help</h3>
             <ul class="space-y-2">
               <li>
-                <a class="hover:text-orange-600" href="#">FAQs</a>
+                <a class="hover:text-orange-600" href="https://en.wikipedia.org/wiki/FAQ#:~:text=A%20frequently%20asked%20questions%20(FAQ,related%20to%20common%20knowledge%20gaps.">FAQs</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Contact Us</a>
+                <a class="hover:text-orange-600" href="https://www.website.com/contact-us/?source=SC">Contact Us</a>
               </li>
               
             </ul>
